--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <!-- Header -->
@@ -56,6 +56,8 @@
             </li>
           </ul>
         </address>
+
+
       </div>
     </header>
 
@@ -135,6 +137,7 @@
           <ul class="doing-list">
             <li class="doing-item">
               <img
+                class="doing-img"
                 src="./images/studio/computer.jpg"
                 alt="Computer"
                 width="360"
@@ -142,13 +145,18 @@
             </li>
             <li class="doing-item">
               <img
+              class="doing-img"
                 src="./images/studio/program.jpg"
                 alt="Programs"
                 width="360"
               />
             </li>
             <li class="doing-item">
-              <img src="./images/studio/phone.jpg" alt="Phone" width="360" />
+              <img 
+              class="doing-img"
+              src="./images/studio/phone.jpg" 
+              alt="Phone" 
+              width="360" />
             </li>
           </ul>
         </div>
@@ -156,7 +164,7 @@
 
       <!-- Our Team -->
       <section class="team section">
-        <div class="container">
+        <div class="team container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-card">
@@ -332,7 +340,7 @@
 
       <!-- Our clients -->
       <section class="clients section">
-        <div class="container">
+        <div class="clients container">
           <h2 class="section-title">Customers</h2>
           <ul class="client-list">
             <li class="client-item">
@@ -383,7 +391,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container">
         <div class="footer-descr">
           <a href="./index.html" class="logo"><span>Web</span>Studio</a>
@@ -432,13 +440,14 @@
 
         <div class="subscribe">
           <b class="footer-subtitle">Subscribe</b>
-          <div class="subscribe-forms">
+          <div class="subscribe-form">
             <label for="user-email">
             <input type="email" placeholder="E-mail" name="user-email" class="subscribe-mail">
           </label>
             <button type="submit" class="footer-btn">Subscribe</button>
           </div>
         </div>
+        
       </div>
       </div>
     </footer>
